--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,12 @@ h2, h4 {
     margin-bottom: 25px;
 }
 
+.gallery {
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 /* Remove margins and padding from the list, and add a black background color */
 ul.topnav {
     list-style-type: none;
