--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ hr {
     padding: 30px;
     margin-bottom: 20px;
     font-size: 18px;
+    display: inline-block;
 }
 
 .text-thin {
@@ -109,3 +110,4 @@ ul.topnav li.icon {display: none;}
     text-align: left;
   }
 }
+
