--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,14 @@ h2, h4 {
     margin-bottom: 25px;
 }
 
+.table>tbody>tr>td {
+    border-top: 1px solid #29343e;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #b9c6d0;
+}
+
 .gallery {
     margin: 0 auto;
     margin-top: 15px;
