--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@ h2, h4 {
     margin-bottom: 15px;
 }
 
+footer p {
+    color: aliceblue;
+}
+
 /* Remove margins and padding from the list, and add a black background color */
 ul.topnav {
     list-style-type: none;
