--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,6 @@ footer p {
     color: aliceblue;
 }
 
-/* Remove margins and padding from the list, and add a black background color */
 ul.topnav {
     list-style-type: none;
     margin-top: 10px;
@@ -94,6 +93,7 @@ ul.topnav li a {
     text-decoration: none;
     transition: 0.3s;
     font-size: 20px;
+    margin: 0 auto;
 }
 
 /* Change background color of links on hover */
